fixing wrong break on inline-code in editor

--- a/themes/highlight.css
+++ b/themes/highlight.css
@@ -5,6 +5,9 @@ p code.hljs{
 code {
 	white-space:pre;
 }
+span code{
+	white-space:pre-line;
+}
 
 #texteditorerrorlayer .specialline{
 	text-decoration:underline;
